--- a/assets/stylesheets/index.bundle.css
+++ b/assets/stylesheets/index.bundle.css
@@ -3375,7 +3375,7 @@
   background: #092041;
   color: #e9faff; }
   .header .labels .label:hover .content {
-    color: #e9faff; }
+    color: #eefbff; }
 
 .header .labels a.label {
   text-decoration: none; }
